syntax = "proto3";

option go_package = "src/protos;service";

package plumb.api;

import "google/api/annotations.proto";

service PlumbAPI {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {
    option (google.api.http) = {
      post : "/hello",
      body : "*"
    };
  };
}

message SayHelloRequest { string name = 1; }

message SayHelloResponse { string response = 1; }